next
- logger::registry factory is no longer relying on a specific contructor signature (#94)
- update README with some performance feedback (#92)
- Reuse already created syslog::facilities(#81)
- file, stderr and stdout sinks are no longer using facilities (#78)
- Fixed bugs: #82, #85, #84, #91
2.1.0
- Fixed bugs : #77, #76, #73, #79, #80
2.0.0
- revisited the facility notion which was too specific (#41)
- use only english (#55)
- definition and types where not displayed in doxygen (#42)
- rename GTestConfig.cmake into GTestExt.cmake (#46)
- performance test are trough GoogleTests(#51)
- now gogle test comes as an external CMake project (#43)
- memset issue (#40)
- use CMake build system (#37)
- replace cpp-pthread features by standard C++17 ones (#38)
- Fixed bugs #56, #57, #71, #44
